Fetch related resources and convert link URL

--- a/template.env
+++ b/template.env
@@ -1,3 +1,5 @@
+WP_CONFIG_PATH="/var/www/wordpress/wp-config.php"
+
 DATABASE_USER="wordpress"
 DATABASE_PASSWORD="wordpress"
 DATABASE_HOST="wordpress.local"
@@ -8,3 +10,5 @@ AWS_SECRET_ACCESS_KEY=""
 
 AWS_REGION="ap-northeast-1"
 AWS_S3_BUCKET=""
+
+TARGET_SITE_URL="http://example.com"
