Don't depend on Wordpress

--- a/template.env
+++ b/template.env
@@ -1,16 +1,10 @@
-WP_CONFIG_PATH="/var/www/wordpress/wp-config.php"
+SOURCE_SITE_URL="http://www.example.com/source"
+TARGET_SITE_URL="http://www.example.com/target"
 
-DATABASE_USER="wordpress"
-DATABASE_PASSWORD="wordpress"
-DATABASE_HOST="wordpress.local"
-DATABASE_NAME="wordpress"
+CDN_SITE_URL="http://www.example.com/cdn"
 
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
 AWS_REGION="ap-northeast-1"
 AWS_S3_BUCKET=""
-
-TARGET_SITE_URL="http://example.com"
-
-CDN_SITE_URL="http://example.com/cdn"
