Add CDN settings

--- a/template.env
+++ b/template.env
@@ -1,10 +1,17 @@
-SOURCE_SITE_URL="http://www.example.com/source"
-TARGET_SITE_URL="http://www.example.com/target"
-
-CDN_SITE_URL="http://www.example.com/cdn"
-
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
 AWS_REGION="ap-northeast-1"
 AWS_S3_BUCKET=""
+
+SOURCE_SITE_URL="http://hoge.example.com"
+TARGET_SITE_URL="http://piyo.example.com"
+
+
+CDN_AWS_ACCESS_KEY_ID=""
+CDN_AWS_SECRET_ACCESS_KEY=""
+
+CDN_AWS_REGION="ap-northeast-1"
+CDN_AWS_S3_BUCKET=""
+
+CDN_SITE_URL="http://cdn.example.com"
