Receive files and output replaced files

--- a/template.env
+++ b/template.env
@@ -16,4 +16,5 @@ CDN_AWS_S3_BUCKET=""
 
 CDN_SITE_URL="http://cdn.example.com"
 
+PATH_INPUT_DIR=="./working/hoge.example.com"
 PATH_OUTPUT_DIR="./working/piyo.example.com"
